--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -28,6 +28,8 @@ provider:
     ATTACHMENT_S3_BUCKET: serverless-udagram-981580076336-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     TODOS_BY_USER_INDEX: UserTodoIndex
+    SNS_WARNING_TOPIC: todoTopic-warning
+    REGION: us-east-1
 
   logs:
     # Enable API Gateway logs
@@ -148,6 +150,33 @@ functions:
           - s3:*
         Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*
 
+  FilterWarningTodo:
+    handler: src/lambda/scheduler/filterWarningMessage.handler
+    events:
+      - schedule:
+          rate: rate(1 minute)
+          enabled: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - sns:*
+        Resource: "*"
+    environment:
+      AWS_ACCOUNT_ID: ${aws:accountId}
+
+  SendWarningMsgNotification:
+    handler: src/lambda/sns/sendWarningMsgNotification.handler
+    events:
+      - sns:
+          arn:
+            Fn::Join:
+              - ':'
+              - - arn:aws:sns
+                - Ref: AWS::Region
+                - Ref: AWS::AccountId
+                - ${self:provider.environment.SNS_WARNING_TOPIC}
+          topicName: ${self:provider.environment.SNS_WARNING_TOPIC}
+
 resources:
   Resources:
     GatewayResponseDefault4XX:
@@ -230,3 +259,10 @@ resources:
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
+
+    TodoWarningTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: Todo Waring topic
+        TopicName: ${self:provider.environment.SNS_WARNING_TOPIC}
+   
