--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -161,6 +161,11 @@ functions:
         Action:
           - sns:*
         Resource: "*"
+      - Effect: Allow
+        Action:
+          - dynamodb:Scan
+          - dynamodb:GetItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
     environment:
       AWS_ACCOUNT_ID: ${aws:accountId}
 
