--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -155,7 +155,7 @@ functions:
     events:
       - schedule:
           rate: rate(1 minute)
-          enabled: true
+          enabled: false
     iamRoleStatements:
       - Effect: Allow
         Action:
