--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -150,12 +150,13 @@ functions:
           - s3:*
         Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*
 
+  # enhancement parts
   FilterWarningTodo:
     handler: src/lambda/scheduler/filterWarningMessage.handler
     events:
       - schedule:
           rate: rate(1 minute)
-          enabled: false
+          enabled: true
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -181,6 +182,7 @@ functions:
                 - Ref: AWS::AccountId
                 - ${self:provider.environment.SNS_WARNING_TOPIC}
           topicName: ${self:provider.environment.SNS_WARNING_TOPIC}
+  # END enhancement parts        
 
 resources:
   Resources:
@@ -265,6 +267,7 @@ resources:
               Resource: 'arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
 
+    #enhancement part
     TodoWarningTopic:
       Type: AWS::SNS::Topic
       Properties:
